--- a/AspNetCoreIdentityServer/Properties/launchSettings.json
+++ b/AspNetCoreIdentityServer/Properties/launchSettings.json
@@ -13,7 +13,7 @@
       "commandName": "Project",
       "commandLineArgs": "no--ef-migrate",
       "launchBrowser": false,
-      "applicationUrl": "http://local_host:5500",
+      "applicationUrl": "https://localhost:5501;http://localhost:5500",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
