--- a/mvcapp/Properties/launchSettings.json
+++ b/mvcapp/Properties/launchSettings.json
@@ -4,11 +4,11 @@
     "anonymousAuthentication": true
     
   },
-  "profiles": {    
+  "profiles": {
     "mvcapp": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5000",
+      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
