--- a/Services/WebApi1.Contracts/WebApi1.Contracts.csproj
+++ b/Services/WebApi1.Contracts/WebApi1.Contracts.csproj
@@ -6,6 +6,6 @@
 
   <ItemGroup>
     <PackageReference Include="MediatR" Version="8.1.0" />
-    <ProjectReference Include="..\Shared\Shared.csproj" />
+    <ProjectReference Include="..\..\Shared\Shared.csproj" />
   </ItemGroup>
 </Project>
