--- a/Services/WebApi1/WebApi1.Web.csproj
+++ b/Services/WebApi1/WebApi1.Web.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Shared\Shared.csproj" />
+    <ProjectReference Include="..\..\Shared\Shared.csproj" />
     <ProjectReference Include="..\Webapi1.Contracts\Webapi1.Contracts.csproj" />
   </ItemGroup>
 
